src/libqsettings.h

typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QVariant QVariant;
typedef QSettings::Format Format;           // C++ enum
typedef QSettings::Scope Scope;             // C++ enum
typedef int Format;                                               // C ABI enum
typedef int Scope;                                                // C ABI enum
QSettings* QSettings_new(libqt_string organization);
QSettings* QSettings_new2(int scope, libqt_string organization);
QSettings* QSettings_new3(int format, int scope, libqt_string organization);
QSettings* QSettings_new4(libqt_string fileName, int format);
QSettings* QSettings_new5();
QSettings* QSettings_new6(int scope);
QSettings* QSettings_new7(libqt_string organization, libqt_string application);
QSettings* QSettings_new8(libqt_string organization, libqt_string application, QObject* parent);
QSettings* QSettings_new9(int scope, libqt_string organization, libqt_string application);
QSettings* QSettings_new10(int scope, libqt_string organization, libqt_string application, QObject* parent);
QSettings* QSettings_new11(int format, int scope, libqt_string organization, libqt_string application);
QSettings* QSettings_new12(int format, int scope, libqt_string organization, libqt_string application, QObject* parent);
QSettings* QSettings_new13(libqt_string fileName, int format, QObject* parent);
QSettings* QSettings_new14(QObject* parent);
QSettings* QSettings_new15(int scope, QObject* parent);
QMetaObject* QSettings_MetaObject(const QSettings* self);
void* QSettings_Metacast(QSettings* self, const char* param1);
int QSettings_Metacall(QSettings* self, int param1, int param2, void** param3);
libqt_string QSettings_Tr(const char* s);
void QSettings_Clear(QSettings* self);
void QSettings_Sync(QSettings* self);
int QSettings_Status(const QSettings* self);
bool QSettings_IsAtomicSyncRequired(const QSettings* self);
void QSettings_SetAtomicSyncRequired(QSettings* self, bool enable);
void QSettings_BeginGroup(QSettings* self, char* prefix);
void QSettings_EndGroup(QSettings* self);
libqt_string QSettings_Group(const QSettings* self);
int QSettings_BeginReadArray(QSettings* self, char* prefix);
void QSettings_BeginWriteArray(QSettings* self, char* prefix);
void QSettings_EndArray(QSettings* self);
void QSettings_SetArrayIndex(QSettings* self, int i);
libqt_list /* of libqt_string */ QSettings_AllKeys(const QSettings* self);
libqt_list /* of libqt_string */ QSettings_ChildKeys(const QSettings* self);
libqt_list /* of libqt_string */ QSettings_ChildGroups(const QSettings* self);
bool QSettings_IsWritable(const QSettings* self);
void QSettings_SetValue(QSettings* self, char* key, QVariant* value);
QVariant* QSettings_Value(const QSettings* self, char* key, QVariant* defaultValue);
QVariant* QSettings_ValueWithKey(const QSettings* self, char* key);
void QSettings_Remove(QSettings* self, char* key);
bool QSettings_Contains(const QSettings* self, char* key);
void QSettings_SetFallbacksEnabled(QSettings* self, bool b);
bool QSettings_FallbacksEnabled(const QSettings* self);
libqt_string QSettings_FileName(const QSettings* self);
int QSettings_Format(const QSettings* self);
int QSettings_Scope(const QSettings* self);
libqt_string QSettings_OrganizationName(const QSettings* self);
libqt_string QSettings_ApplicationName(const QSettings* self);
void QSettings_SetDefaultFormat(int format);
int QSettings_DefaultFormat();
void QSettings_SetPath(int format, int scope, libqt_string path);
bool QSettings_Event(QSettings* self, QEvent* event);
libqt_string QSettings_Tr2(const char* s, const char* c);
libqt_string QSettings_Tr3(const char* s, const char* c, int n);
void QSettings_BeginWriteArray2(QSettings* self, char* prefix, int size);
void QSettings_Delete(QSettings* self);